# dash-builder

./: .gitignore  .python-version  README.md  mkdocs.yml  pyproject.toml
.github/: pdoc.yaml
.github/workflows/: pdoc.yaml  publish-docs.yaml  publish-package.yaml  python-package.yml  release.yml
dash_builder/: __init__.py  dash_page.py  dash_view.py
docs/: code-examples.md  index.md
src/dash_builder/: __init__.py  _dash_object.py  cli.py  dash_page.py  dash_view.py  main.py
src/dash_builder/examples/basic-mantine/: app.py
src/dash_builder/examples/basic-mantine/pages/: analytics.py  home.py  not_found_404.py
src/dash_builder/examples/basic-mantine/views/: __init__.py  footer.py  header.py  sidebar.py
src/dash_builder/templates/: __init__.py  _base_template.py  app_template.py  homepage_template.py  not_found_404_template.py  object_template.py  page_template.py  view_template.py
tests/: conftest.py  test_cli.py  test_dash_page.py  test_dash_view.py  test_main.py
